--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
             <ul class="list">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Courses</a></li>
+                <li><a href="#">Courses</a>
+                    <ul>
+                        <li><a href="#">Graphic Design Training</a></li>
+                        <li><a href="#">Web & Software Training</a></li>
+                        <li><a href="#">Digital Marketing Training</a></li>
+                        <li><a href="#">3D Animation & Visualization Training</a></li>
+                        <li><a href="#">Networking Training</a></li>
+                    </ul>
+                </li>
                 <li>
                     <a href="#">Admission</a>
                     <ul>
